# wevex

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  test_ruff.sh
.claude/: settings.json
.cursor/rules/: skein.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
_archive_v2/backend/: .env.example  requirements.txt  run_server.py
_archive_v2/backend/app/: agents.py  auth.py  config.py  db.py  embeddings.py  main.py  models.py  skills.py
_archive_v2/backend/supabase/: schema.sql
_archive_v2/cli/: setup.py
_archive_v2/cli/brain/: api.py  main.py
_archive_v2/frontend/: .env.example  index.html  package-lock.json  package.json  run_build.py
_archive_v2/frontend/src/: App.tsx
_archive_v2/frontend/src-tauri/: Cargo.toml  copy_bin.py  tauri.conf.json
_archive_v2/frontend/src-tauri/.cargo/: config.toml
_archive_v2/frontend/src-tauri/icons/: icon.icns
_archive_v2/frontend/src-tauri/src/: lib.rs  main.rs
_archive_v2/frontend/src/components/: Auth.tsx  Dashboard.tsx  Layout.tsx  SearchResults.tsx  Sidebar.tsx  SkillEditor.tsx  SkillList.tsx  SkillView.tsx
_archive_v2/frontend/src/lib/: supabase.ts
_archive_v2/frontend/src/styles/: global.css
bench/: __init__.py  __main__.py  adapter.py  budgets.py  reporter.py  runner.py
bench/adapters/: __init__.py  skein_ephemeral.py  skein_live.py
bench/corpus/: __init__.py  code_files.json  commits.json  fragments.json  labeled_queries.json
bench/scenarios/: __init__.py  auto_capture.py  correctness.py  cross_session_handoff.py  daemon_rss.py  latency.py  retrieval_quality.py  token_budget.py
extension/: README.md  background.js  badge.css  content_chatgpt.js  content_claude.js  content_common.js  content_gemini.js  manifest.json  popup.html  popup.js
scripts/: bump_version.py
skein/: __init__.py  __main__.py  _proc.py  agents_md.py  auth.py  cli.py  clients.py  config.py  connections.py  daemon.py  dependencies.py  docs_watcher.py  embeddings.py  events.py  git_watcher.py  hooks.py  hooks_install.py  ingest.py  mcp.py  models.py  passive.py  paths.py  projects.py  retrieval.py  scanner.py  schema.sql  scope_resolver.py  server.py  single_instance.py  storage.py  sync.py  transcript_watcher.py  ui.py  value.py  version_check.py  watcher.py  watcher_manager.py
skein/routers/: briefing.py  chunks.py  commits.py  fragments.py  identities.py  leases.py  pair.py  scopes.py
skein/tui/: __init__.py  app.py  client.py  styles.css
skein/tui/screens/: __init__.py  briefing.py  clients.py  events.py  fragments.py  help_modal.py  inbox.py
skein/tui/widgets/: __init__.py  health_dot.py
tests/: conftest.py  test_agents_md.py  test_api.py  test_briefing.py  test_chunks.py  test_chunks_api.py  test_cli_connect.py  test_cli_scope_pin.py  test_cli_surface_smoke.py  test_clients.py  test_connections.py  test_daemon.py  test_daemon_schtasks.py  test_docs_watcher.py  test_embedding_defaults.py  test_embeddings_hardening.py  test_embeddings_naming.py  test_events.py  test_fragment_value.py  test_git_watcher.py  test_hooks.py  test_inbox_auto_approve.py  test_ingest_safety.py  test_iter11_fixes.py  test_iter29_dayone.py  test_iter32_capture.py  test_iter34_inbox_value_floor.py  test_iter35_recall_outcome.py  test_mcp.py  test_mcp_value_tools.py  test_passive.py  test_projects_registry.py  test_recall_quality.py  test_retrieval.py  test_scanner.py  test_scope_autodetect.py  test_scope_resolver.py  test_single_instance.py  test_storage.py  test_sync_antigravity.py  (+6 more)
tests/bench/: conftest.py  test_auto_capture.py  test_correctness.py  test_daemon_rss.py  test_latency_budgets.py  test_retrieval_quality.py
wevex/tui/screens/: help_modal.py
