[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Published to PyPI as `skn` because `skein` is taken by an unrelated Apache
# project (Hadoop YARN deployer). The CLI command remains `skein` — see
# [project.scripts] below. Users install with `pip install skn`, run with
# `skein up`.
name = "skn"
version = "0.1.0"
description = "Local MCP context bus for coding LLMs (Claude Code, Cursor, Codex, Gemini CLI, Antigravity, Copilot, VS Code, opencode)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Ameliomar Togambaev", email = "atogambaev@gmail.com"}]
keywords = ["mcp", "llm", "context", "agents", "claude", "cursor", "codex"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "pydantic>=2.5,<3.0",
  "click>=8.1,<9.0",
  "httpx>=0.27,<1.0",
  "rich>=13.7",
  "textual>=0.80",
  "numpy>=1.24",
  "watchdog>=3.0",
  "tomli>=2.0; python_version < '3.11'",
  "tomli-w>=1.0",
  # Local-first semantic embeddings — BAAI/bge-small-en-v1.5 (384-dim).
  # Downloads ~130 MB to ~/.cache/fastembed/ on first use. No API key.
  "fastembed>=0.3.0",
]

[project.optional-dependencies]
# Cloud embedding providers — opt-in. Skein defaults to the local fastembed
# provider so `pip install skein && skein up` is zero-config.
gemini = ["google-genai>=0.3"]
openai = ["openai>=1.30"]
fastembed = ["fastembed>=0.3.0"]  # alias for explicit selection; already in base
test = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.scripts]
skein = "skein.cli:main"

[project.urls]
Homepage = "https://github.com/Asanali111/skein"
Documentation = "https://github.com/Asanali111/skein/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["skein*"]
exclude = ["_archive_v2*", "tests*", "examples*"]

[tool.setuptools.package-data]
skein = ["schema.sql", "templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-ra --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]
